Replace MySQL with Redis for proxy status sync
Co-authored-by: Federico <developing@fedet.it>